[attempt] implement simple disparity map estimation

--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# optional: allow Jupyter to \"hot reload\" the Python modules I wrote, to avoid restarting the kernel after every change\n",
     "%load_ext autoreload\n",
@@ -110,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +111,11 @@
     "    @staticmethod\n",
     "    def transform(\n",
     "        image: np.ndarray,\n",
-    "        filter_size: int,\n",
+    "        filter_side_length: int,\n",
     "        do_logging: bool = False,\n",
     "    ) -> np.ndarray:\n",
     "        \"\"\"\n",
-    "        Perform a rank filtering operation on an image.\n",
+    "        Perform rank filtering on an image.\n",
     "\n",
     "        The goal is to produce a new image where each cell value\n",
     "        represents the \"rank\" of the corresponding pixel in the input\n",
@@ -135,7 +126,7 @@
     "            image(np.ndarray): in case its RGB, the transform will be\n",
     "                                per channel. Please pass the image in\n",
     "                                channels-last format.\n",
-    "            filter_size(int): this is k. The size of each local neighborhood\n",
+    "            filter_side_length(int): this is k. The size of each local neighborhood\n",
     "                              will be kxk. Please pass an odd value > 0.\n",
     "        \n",
     "        Returns: np.ndarray: the transformed image\n",
@@ -171,18 +162,18 @@
     "                print(f\"I think that {center_val} is at the center of {block_of_pixels}\")\n",
     "            transformed_block = np.where(block_of_pixels < center_val, 1, 0)\n",
     "            if do_logging:\n",
-    "                print(f\"Transformed bloc <{block_of_pixels}> into: <{transformed_block}>\")\n",
+    "                print(f\"Transformed block <{block_of_pixels}> into: <{transformed_block}>\")\n",
     "            return np.sum(transformed_block)\n",
     "\n",
     "        ### DRIVER\n",
     "        # data validation\n",
     "        assert isinstance(image, np.ndarray) \n",
     "        assert image.shape > (0, 0)\n",
-    "        assert isinstance(filter_size, int)\n",
-    "        assert filter_size > 0 and filter_size % 2 == 1\n",
+    "        assert isinstance(filter_side_length, int)\n",
+    "        assert filter_side_length > 0 and filter_side_length % 2 == 1\n",
     "\n",
     "        # make a copy of the img, padded - will be an intermediate repr\n",
-    "        kernel = np.ones((filter_size, filter_size))\n",
+    "        kernel = np.ones((filter_side_length, filter_side_length))\n",
     "        num_channels = -1\n",
     "        if len(image.shape) == 2:  # grayscale\n",
     "            num_channels = 1\n",
@@ -195,7 +186,7 @@
     "                ops.pad(image[:, :, channel_index], kernel, stride=1, padding_type=\"zero\")[0]\n",
     "                for channel_index in range(num_channels)\n",
     "            ]\n",
-    "            padded_image = np.dstack(channel)\n",
+    "            padded_image = np.dstack(channels)\n",
     "\n",
     "        # fill in the output\n",
     "        stride = 1\n",
@@ -225,8 +216,237 @@
     "                starting_row_ndx += stride\n",
     "            output_image.append(transformed_channel)\n",
     "        # stack the channels, and return\n",
-    "        return np.dstack(output_image)"
+    "        return np.dstack(output_image).squeeze()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rank Transforming the Left View"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_left = RankTransform2D.transform(\n",
+    "    left_img, filter_side_length=5, do_logging=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sanity check to make sure the rank transform produced a new image of the same dimensions as the input:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformed_left.shape == left_img.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2: Computing a Disparity Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# make a new class SimpleDisparityMap - for 2 images already rectified\\n\\n# add a constructor - intake 2 original imgs\\n# add an instance method - compute - input is the type of similarity, window size for the rank transform, window size for similarity comparison, and whether to do logging\\n\\n\\n# add a visualizer classmethod - all args as above + plot title\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from __future__ import annotations\n",
+    "from dataclasses import dataclass\n",
+    "import functools\n",
+    "from typing import Literal, Union\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from util import ops\n",
+    "from util.ops import SimilarityMeasure\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class SimpleDisparityMap:\n",
+    "    \"\"\"\n",
+    "    Computes a disparity map between two images based on the\n",
+    "    assumption that they are:\n",
+    "        1) of the same shape, \n",
+    "        2) grayscale,\n",
+    "        3) and already rectified.\n",
+    "    \"\"\"\n",
+    "    left_image: np.ndarray\n",
+    "    right_image: np.ndarray\n",
+    "    stride: int = 1\n",
+    "    padding_type: Union[Literal[\"zero\"], Literal[\"repeat\"]] = \"zero\"\n",
+    "\n",
+    "    def compute(\n",
+    "            self: SimpleDisparityMap,\n",
+    "            similarity_measure: SimilarityMeasure,\n",
+    "            rank_transform_filter_side_length: int,\n",
+    "            window_size: int,\n",
+    "            do_logging: bool = False,\n",
+    "        ) -> np.ndarray:\n",
+    "        \"\"\"\n",
+    "        Compute pixel-wise disparity by searching in the second image \n",
+    "        the most similar patch along the same row in the first image.\n",
+    "        \"\"\"\n",
+    "        ### HELPER(S)\n",
+    "        def _fetch_image_patches(\n",
+    "            ptr: np.ndarray,  # aka, the padded, rank transformed repr of the right\n",
+    "            left_pixel_block: np.ndarray,\n",
+    "            row_index: int,\n",
+    "            ptr_starting_col_index: int,\n",
+    "        ) -> int:\n",
+    "            \"\"\"\n",
+    "            TODO\n",
+    "\n",
+    "            Args:\n",
+    "                channel: 2D array - one of the channels of the input image\n",
+    "                kernel: 2D array representing the parameters to use\n",
+    "                row_index, col_index: int: the coordinates of the upper left corner\n",
+    "                                    of the block of pixels being convolved\n",
+    "\n",
+    "            Returns: int: TODO\n",
+    "            \"\"\"\n",
+    "            # form a list of tuple(patch, center_pixel_column)\n",
+    "            kernel_h, kernel_w = left_pixel_block.shape\n",
+    "            patches, center_col_indices = list(), list()\n",
+    "            for right_image_starting_col_ndx in np.arange(ptr_starting_col_index, ptr.shape[1] - kernel_w, self.stride):\n",
+    "                patch = ptr[\n",
+    "                    row_index:row_index + kernel_h,\n",
+    "                    right_image_starting_col_ndx:right_image_starting_col_ndx + kernel_w\n",
+    "                ]\n",
+    "                patches.append(patch)\n",
+    "\n",
+    "                right_image_center_col_index = right_image_starting_col_ndx + (kernel_w // 2)\n",
+    "                center_col_indices.append(right_image_center_col_index)\n",
+    "            # for each patch in the row of the second compute the SAD with the same block from the first\n",
+    "            patches = np.array(patches)\n",
+    "            compute_sad = functools.partial(\n",
+    "                ops.compute_similarity,\n",
+    "                mode=similarity_measure,\n",
+    "                arr1=left_pixel_block\n",
+    "            )\n",
+    "            hypothesis_similarities = np.apply_along_axis(\n",
+    "                compute_sad,\n",
+    "                axis=0,\n",
+    "                arr=patches,\n",
+    "            )\n",
+    "            # at the end, choose the patch of the second with the lowest SAD\n",
+    "            best_center_col_hypothesis = center_col_indices[np.argmin(hypothesis_similarities)]\n",
+    "            return best_center_col_hypothesis\n",
+    "\n",
+    "        ### DRIVER\n",
+    "        # data validations\n",
+    "        assert self.left_image.shape == self.right_image.shape, (\n",
+    "            f\"Image shape mismatch between left <{self.left_image.shape}>\"\n",
+    "            f\" and right <{self.right_image.shape}> views.\"\n",
+    "        )\n",
+    "        assert len(self.left_image) == 2, (\n",
+    "            f\"Expected a 2D array representing a grayscale image, \"\n",
+    "            f\"actual number of channels is: {self.left_image.shape[2]}.\"\n",
+    "        )\n",
+    "        # rank transform both images\n",
+    "        transformed_left = RankTransform2D.transform(self.left_image, rank_transform_filter_side_length)\n",
+    "        transformed_right = RankTransform2D.transform(self.right_image, rank_transform_filter_side_length)\n",
+    "        # create a square kernel of all 1's using the given window size\n",
+    "        kernel = np.ones((window_size, window_size))\n",
+    "        # pad both images\n",
+    "        padded_transformed_left = ptl = ops.pad(\n",
+    "            transformed_left,\n",
+    "            kernel,\n",
+    "            stride=self.stride,\n",
+    "            padding_type=self.padding_type\n",
+    "        )\n",
+    "        padded_transformed_right = ops.pad(\n",
+    "            transformed_right,\n",
+    "            kernel,\n",
+    "            stride=self.stride,\n",
+    "            padding_type=self.padding_type\n",
+    "        )\n",
+    "        # create the output image\n",
+    "        output_image = list()\n",
+    "        kernel_h, kernel_w = kernel.shape\n",
+    "        # for every row in the first image\n",
+    "        for starting_row_ndx in np.arange(0, ptl.shape[0] - kernel_h, self.stride):\n",
+    "            output_image_row = list()\n",
+    "            for left_image_starting_col_ndx in np.arange(0, ptl.shape[1] - kernel_w, self.stride):\n",
+    "                left_pixel_block = padded_transformed_left[\n",
+    "                    starting_row_ndx : starting_row_ndx + kernel_h,\n",
+    "                    left_image_starting_col_ndx : left_image_starting_col_ndx + kernel_w,\n",
+    "                ]\n",
+    "                left_block_center_pixel_index = starting_row_ndx + (kernel_h // 2)\n",
+    "                # slide the kernel over the same row in the second image\n",
+    "                best_center_col_hypothesis = ops.slide_kernel_over_image(\n",
+    "                    padded_transformed_right,\n",
+    "                    kernel=left_pixel_block,\n",
+    "                    row_index=starting_row_ndx,\n",
+    "                    stride=self.stride,\n",
+    "                    apply=_fetch_image_patches,\n",
+    "                )\n",
+    "                disparity = np.abs(best_center_col_hypothesis - left_block_center_pixel_index)\n",
+    "                output_image_row.append(disparity)\n",
+    "            output_image.append(output_image_row)\n",
+    "        # all done!\n",
+    "        return np.array(output_image)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def compute_and_visualize(\n",
+    "        cls: SimpleDisparityMap,\n",
+    "        image1: np.ndarray,\n",
+    "        image2: np.ndarray,\n",
+    "        similarity_measure: SimilarityMeasure,\n",
+    "        rank_transform_filter_side_length: int,\n",
+    "        window_size: int,\n",
+    "        scene_name: str,\n",
+    "        do_logging: bool = False,\n",
+    "    ) -> None:\n",
+    "        \"\"\"\n",
+    "        Convenience wrapper that both computes and plots a disparity map.\n",
+    "        \"\"\"\n",
+    "        # TODO\n",
+    "        ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
