update docstring, add debugging assertions to help test

--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -273,20 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# make a new class SimpleDisparityMap - for 2 images already rectified\\n\\n# add a constructor - intake 2 original imgs\\n# add an instance method - compute - input is the type of similarity, window size for the rank transform, window size for similarity comparison, and whether to do logging\\n\\n\\n# add a visualizer classmethod - all args as above + plot title\\n'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations\n",
     "from dataclasses import dataclass\n",
@@ -301,7 +290,7 @@
     "\n",
     "\n",
     "@dataclass\n",
-    "class SimpleDisparityMap:\n",
+    "class SimpleStereoDisparityMap:\n",
     "    \"\"\"\n",
     "    Computes a disparity map between two images based on the\n",
     "    assumption that they are:\n",
@@ -315,7 +304,7 @@
     "    padding_type: Union[Literal[\"zero\"], Literal[\"repeat\"]] = \"zero\"\n",
     "\n",
     "    def compute(\n",
-    "            self: SimpleDisparityMap,\n",
+    "            self: SimpleStereoDisparityMap,\n",
     "            similarity_measure: SimilarityMeasure,\n",
     "            rank_transform_filter_side_length: int,\n",
     "            window_size: int,\n",
@@ -345,18 +334,24 @@
     "            \"\"\"\n",
     "            # form a list of tuple(patch, center_pixel_column)\n",
     "            kernel_h, kernel_w = left_pixel_block.shape\n",
-    "            patches, center_col_indices = list(), list()\n",
-    "            for right_image_starting_col_ndx in np.arange(ptr_starting_col_index, ptr.shape[1] - kernel_w, self.stride):\n",
+    "            right_image_starting_col_indices = np.arange(\n",
+    "                ptr_starting_col_index, ptr.shape[1] - kernel_w, self.stride\n",
+    "            )\n",
+    "            patches = np.zeros((\n",
+    "                right_image_starting_col_indices.shape[0],\n",
+    "                kernel_h, kernel_w),\n",
+    "            )\n",
+    "            center_col_indices = np.zeros(right_image_starting_col_indices.shape[0])\n",
+    "            for right_image_starting_col_ndx in right_image_starting_col_indices:\n",
     "                patch = ptr[\n",
     "                    row_index:row_index + kernel_h,\n",
     "                    right_image_starting_col_ndx:right_image_starting_col_ndx + kernel_w\n",
     "                ]\n",
-    "                patches.append(patch)\n",
+    "                patches[right_image_starting_col_ndx, :, :] = patch\n",
     "\n",
     "                right_image_center_col_index = right_image_starting_col_ndx + (kernel_w // 2)\n",
-    "                center_col_indices.append(right_image_center_col_index)\n",
-    "            # for each patch in the row of the second compute the SAD with the same block from the first\n",
-    "            patches = np.array(patches)\n",
+    "                center_col_indices[right_image_starting_col_ndx] = right_image_center_col_index\n",
+    "            # for each patch in the row of the right image, compute the SAD with the same block from the first\n",
     "            compute_sad = functools.partial(\n",
     "                ops.compute_similarity,\n",
     "                mode=similarity_measure,\n",
@@ -367,7 +362,7 @@
     "                axis=0,\n",
     "                arr=patches,\n",
     "            )\n",
-    "            # at the end, choose the patch of the second with the lowest SAD\n",
+    "            # at the end, choose the patch of the right image with the most similarity\n",
     "            best_center_col_hypothesis = center_col_indices[np.argmin(hypothesis_similarities)]\n",
     "            return best_center_col_hypothesis\n",
     "\n",
@@ -423,11 +418,15 @@
     "                output_image_row.append(disparity)\n",
     "            output_image.append(output_image_row)\n",
     "        # all done!\n",
-    "        return np.array(output_image)\n",
+    "        output = np.array(output_image)\n",
+    "        assert output.shape == self.left_image.shape, f\"Shape mismatch {output.shape} != {self.left_image.shape}\"\n",
+    "        assert output.min() >= 0, f\"min of output is too low\"\n",
+    "        assert output.max() <= 63, f\"max of output is too high\"\n",
+    "        return output\n",
     "\n",
     "    @classmethod\n",
     "    def compute_and_visualize(\n",
-    "        cls: SimpleDisparityMap,\n",
+    "        cls: SimpleStereoDisparityMap,\n",
     "        image1: np.ndarray,\n",
     "        image2: np.ndarray,\n",
     "        similarity_measure: SimilarityMeasure,\n",
@@ -435,12 +434,36 @@
     "        window_size: int,\n",
     "        scene_name: str,\n",
     "        do_logging: bool = False,\n",
+    "        stride: int = 1,\n",
+    "        padding_type: Union[Literal[\"zero\"], Literal[\"repeat\"]] = \"zero\",\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
-    "        Convenience wrapper that both computes and plots a disparity map.\n",
+    "        Convenience wrapper that both computes and plots\n",
+    "        1 disparity map for a pair of stereo images.\n",
+    "        TODO\n",
     "        \"\"\"\n",
-    "        # TODO\n",
-    "        ..."
+    "        mapper = cls(\n",
+    "            left_image=image1,\n",
+    "            right_image=image2,\n",
+    "            stride=stride,\n",
+    "            padding_type=padding_type,\n",
+    "        )\n",
+    "        disparity_map = mapper.compute(\n",
+    "            similarity_measure=similarity_measure,\n",
+    "            rank_transform_filter_side_length=rank_transform_filter_side_length,\n",
+    "            window_size=window_size,\n",
+    "            do_logging=do_logging,\n",
+    "        )\n",
+    "        plt.imshow(disparity_map)\n",
+    "        plt.title(f\"Left and Right View Disparity for \\\"{scene_name}\\\"\")\n",
+    "        plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: compare both the implementations of 3x3 window and 15x15 against the same GT map."
    ]
   },
   {
