cleanup by adding docstring

--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -355,91 +355,23 @@
     "                image: np.ndarray,\n",
     "                kernel_dims: tuple[int, int]  # h, w\n",
     "            ) -> int:\n",
-    "            \"\"\"TODO[Zain]: add docstring\"\"\"\n",
+    "            \"\"\"\n",
+    "            Returns the sum of cell values within a small window of an image.\n",
+    "\n",
+    "            Parameters:\n",
+    "                starting_col(np.ndarray): shape of (1,), has an integer dtype\n",
+    "                starting_row_ndx(int): index for the top row of the window\n",
+    "                image(nd.ndarray): a grayscale image\n",
+    "                kernel_dims(int, int): height and width of the window\n",
+    "\n",
+    "            Returns: int\n",
+    "            \"\"\"\n",
     "            kernel_h, kernel_w = kernel_dims\n",
     "            starting_col_ndx = starting_col[0]\n",
     "            return np.sum(image[\n",
     "                starting_row_ndx : int(starting_row_ndx + kernel_h),\n",
     "                starting_col_ndx : int(starting_col_ndx + kernel_w)\n",
     "            ])\n",
-    "\n",
-    "        def _fetch_image_patches(\n",
-    "            ptr: np.ndarray,  # aka the padded, rank transformed repr of the right image\n",
-    "            left_pixel_block: np.ndarray,\n",
-    "            starting_row_index: int,\n",
-    "            ptr_starting_col_index: int,\n",
-    "        ) -> int:\n",
-    "            \"\"\"\n",
-    "            TODO[add docstring]\n",
-    "\n",
-    "            Args:\n",
-    "                channel: 2D array - one of the channels of the input image\n",
-    "                kernel: 2D array representing the parameters to use\n",
-    "                starting_row_index, ptr_starting_col_index: int: the coordinates of the upper left corner\n",
-    "                                    of the block of pixels being convolved\n",
-    "\n",
-    "            Returns: int: TODO\n",
-    "            \"\"\"\n",
-    "            # form a list of tuple(patch, center_pixel_column)\n",
-    "            kernel_h, kernel_w = left_pixel_block.shape\n",
-    "            right_image_starting_col_indices = np.arange(\n",
-    "                ptr_starting_col_index,\n",
-    "                max(-1, ptr_starting_col_index - max_disparity_level),\n",
-    "                -1 * self.stride\n",
-    "            )\n",
-    "            if do_logging:\n",
-    "                print(\n",
-    "                    f\"Starting to fetch patches starting at indices: {right_image_starting_col_indices}.\"\n",
-    "                )\n",
-    "            patches = np.zeros((\n",
-    "                right_image_starting_col_indices.shape[0],\n",
-    "                kernel_h * kernel_w\n",
-    "            ))\n",
-    "            center_col_indices = np.zeros(right_image_starting_col_indices.shape[0])\n",
-    "            iter_num = 0\n",
-    "            for right_image_starting_col_ndx in right_image_starting_col_indices:\n",
-    "                patch = ptr[\n",
-    "                    starting_row_index : starting_row_index + kernel_h,\n",
-    "                    right_image_starting_col_ndx : right_image_starting_col_ndx + kernel_w,\n",
-    "                ]\n",
-    "                patches[iter_num, :] = patch.reshape(kernel_h*kernel_w)\n",
-    "\n",
-    "                right_image_center_col_index = right_image_starting_col_ndx + (kernel_w // 2)\n",
-    "                center_col_indices[iter_num] = right_image_center_col_index\n",
-    "\n",
-    "                iter_num += 1\n",
-    "            # for each patch in the row of the right image, compute the SAD with the same block from the first\n",
-    "            compute_sad = functools.partial(\n",
-    "                ops.compute_similarity,\n",
-    "                mode=similarity_measure,\n",
-    "                arr1=left_pixel_block\n",
-    "            )\n",
-    "            # print(f\"Patches and center col indices has shape: {patches.shape, center_col_indices.shape}\")\n",
-    "            if patches.shape[0] == 0:\n",
-    "                # print(f\"Patches: {patches}\")\n",
-    "                if do_logging:\n",
-    "                    print(\"No patches! exiting early with same col, this right image col has no corr with the left image\")\n",
-    "                return ptr_starting_col_index\n",
-    "            # TODO[Zain]: optimize in the future\n",
-    "            hypothesis_similarities = np.apply_along_axis(\n",
-    "                lambda arr2: compute_sad(arr2=arr2.reshape((kernel_h, kernel_w))),\n",
-    "                axis=1,\n",
-    "                arr=patches,\n",
-    "            )\n",
-    "            # hypothesis_similarities = list()\n",
-    "            # for patch_index in np.arange(patches.shape[0]):\n",
-    "            #     patch = patches[patch_index, :].reshape((kernel_h, kernel_w))\n",
-    "            #     hypothesis_similarities.append(\n",
-    "            #         compute_sad(arr2=patch)\n",
-    "            #     )\n",
-    "            # hypothesis_similarities = np.array(hypothesis_similarities)\n",
-    "            assert hypothesis_similarities.shape == center_col_indices.shape, (\n",
-    "                f\"Expected hypothesis_similarities to have a shape of: {center_col_indices.shape}, \",\n",
-    "                f\"but actual shape is: {hypothesis_similarities.shape}\",\n",
-    "            )\n",
-    "            # at the end, choose the patch of the right image with the most similarity\n",
-    "            best_center_col_hypothesis = center_col_indices[np.argmin(hypothesis_similarities)]\n",
-    "            return best_center_col_hypothesis\n",
     "\n",
     "        ### DRIVER\n",
     "        # data validations\n",
