--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -649,6 +649,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Error Rate of `SimpleStereoDisparityMap` in a 3x3 Window"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
@@ -719,6 +726,13 @@
     "    padding_type=\"zero\",\n",
     "    max_disparity_level=63,  # given in the assignment description\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Error Rate of `SimpleStereoDisparityMap` in a 15x15 Window"
    ]
   },
   {
