rename hw 2 notebook

--- a/src/experiments_hw2.ipynb
+++ b/src/experiments_hw2.ipynb
@@ -837,6 +837,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2: Design the Stereo Geometry and Disparity Search Parameters\n",
+    "\n",
+    "For rendering, I tried to keep the extrinsic parameters simple:\n",
+    "\n",
+    "1. the rotation matrix `R` would remain as a 3x3 `I`, so the epipolar lines would be parallel (I believe that would help with rectification).\n",
+    "\n",
+    "2. the translation vector `t` only changes the camera's coordinates in world space along the X-axis - in this way, the disparity can be computed just as in problem 1: by using `SimpleStereoDisparityMap` to search along image rows for potential pixel correspondences.\n",
+    "\n",
+    "**Stereo Baseline**: \n",
+    "\n",
+    "\n",
+    "**Disparity range to evaluate**:\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
