--- a/src/experiments_hw2.ipynb
+++ b/src/experiments_hw2.ipynb
@@ -751,7 +751,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO[Zain]: improve quality of the disparity map - perhaps the rank transform has an issue? Or the winner-takes-all portion is done incorrectly?"
+    "#### Analysis\n",
+    "\n",
+    "As we can see, neither of the disparity maps has a good error rate, as both are north of 95%.\n",
+    "\n",
+    "The map created with the 15x15 local window fared slightly better, which suggests could be improved by using an even larger window. With more time, I would attempt to improve these results by trying out larger window sizes and (to be honest) investigating the code of `RankTransform2D` and `SimpleStereoDisparityMap`, in case I accidentally made any mistakes in my implementation."
    ]
   },
   {
@@ -830,9 +834,11 @@
     "\n",
     "For rendering, I tried to keep the extrinsic parameters simple:\n",
     "\n",
-    "1. the rotation matrix `R` would remain as a 3x3 `I`, so the epipolar lines would be parallel (I believe that would help with rectification).\n",
+    "1. the rotation matrix `R` would remain as a 3x3 identity matrix, `I`, so the epipolar lines would be parallel (I believe that would help with rectification).\n",
     "\n",
-    "2. the translation vector `t` only changes the camera's coordinates in world space along the X-axis - in this way, the disparity can be computed just as in problem 1: by using `SimpleStereoDisparityMap` to search along image rows for potential pixel correspondences.\n",
+    "2. the translation vector `t` only changes the camera's coordinates in world space along the X-axis. It is hardcoded into the rendering script, named `dolly_zoom_slow_modified.py`, as `move = np.array([0.155, 0.0, 0]).reshape((3, 1))`. \n",
+    "\n",
+    "With this kind of camera motion, the disparity can be computed just as in problem 1: by using `SimpleStereoDisparityMap` to search along image rows for potential pixel correspondences.\n",
     "\n"
    ]
   },
@@ -849,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,8 +876,8 @@
     "\n",
     "    Returns: float: the stereo camera basline\n",
     "    \"\"\"\n",
-    "    camera_center_1 = (-1 * np.linalg.inv(R1)) * t1\n",
-    "    camera_center_2 = (-1 * np.linalg.inv(R2)) * t2\n",
+    "    camera_center_1 = (-1 * np.linalg.inv(R1)) @ t1\n",
+    "    camera_center_2 = (-1 * np.linalg.inv(R2)) @ t2\n",
     "    return np.linalg.norm(camera_center_1 - camera_center_2, ord=2)"
    ]
   },
@@ -886,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1101,9 +1107,10 @@
    "outputs": [],
    "source": [
     "convert_rgb_to_gray = lambda image: np.squeeze(\n",
-    "    (0.3 * image[:, :, 0]) + \n",
-    "    (0.59 * image[:, :, 1]) + \n",
-    "    (0.11 * image[:, :, 2])\n",
+    "    # formula taken from the HW 3 pdf description\n",
+    "    (0.3 * image[:, :, 0]) +  # red\n",
+    "    (0.59 * image[:, :, 1]) +  # green\n",
+    "    (0.11 * image[:, :, 2])  # blue\n",
     ")"
    ]
   },
@@ -1188,13 +1195,6 @@
     "    max_disparity_level=33,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
