add pseudocode for step 2

--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -96,6 +96,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# A: define a 3D array - for now, only possible colors are 0 (empty) or 1 (occupied)\n",
+    "\n",
+    "# B: create a dict of all the camera projection matricies --> silhouette images\n",
+    "\n",
+    "# C: for each 3D index in the 3D array\n",
+    "    # get the corresponding 3D location in world space\n",
+    "        # X = i * voxel_size_x + min_world_x\n",
+    "        # Y = j * voxel_size_y + min_world_y\n",
+    "        # Z = k * voxel_size_z + min_world_z\n",
+    "    # init a count = 0 for num_images_in_silhouette\n",
+    "    # for each projection matrix\n",
+    "        # get the 2D image location in homo coords\n",
+    "        # convert to \"pixel coords\"\n",
+    "        # check the value of the location in the silhoute - increment value of num_images_in_silhouette\n",
+    "    # if the projection was in the silhouette  for all --> set the 3D index to be (occupied)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
