--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# optional: allow Jupyter to \"hot reload\" the modules we import - after each change, rerun this cell (instead of restarting the kernel!!)\n",
     "%load_ext autoreload\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +122,7 @@
        "         4.62931201e+00]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 255])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(test_silhouette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +248,7 @@
        " '../dancer/calibration/cam05.xml']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,10 +267,21 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "from util import ops\n",
     "\n",
-    "def determine_visual_hull(scene_shape: tuple[int, int, int]) -> np.ndarray:\n",
+    "\n",
+    "def determine_visual_hull(\n",
+    "        scene_shape: tuple[int, int, int],\n",
+    "        scene_coords: tuple[np.ndarray, np.ndarray, np.ndarray],\n",
+    "        cam_transform_paths: list[str],\n",
+    "        silhouette_paths: list[str],\n",
+    "        debug_mode: bool = False,\n",
+    "    ) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Evaluates which voxels are empty and which are occupied.\n",
+    "\n",
+    "    Example:\n",
+    "    >>>\n",
     "\n",
     "    TODO: add details, params, return value\n",
     "    \"\"\"\n",
@@ -250,7 +290,8 @@
     "\n",
     "    ### HELPER(S)\n",
     "    def _get_camera_transform_from_xml(path_to_transform: str) -> np.ndarray:\n",
-    "        tree = ET.parse(path_to_transform)  # TODO: debug\n",
+    "        \"\"\"Reads serialized form of a projection matrix into a 3x4 NumPy array.\"\"\"\n",
+    "        tree = ET.parse(path_to_transform)\n",
     "        root = tree.getroot()\n",
     "        vals = [float(val) for val in root.text.split()]\n",
     "        return np.array(vals).reshape(3, 4)\n",
@@ -258,6 +299,7 @@
     "    ### DRIVER\n",
     "    # A: define a 3D array - for now, only possible colors are 0 (empty) or 1 (occupied)\n",
     "    x_resolution, y_resolution, z_resolution = scene_shape\n",
+    "    x_coords, y_coords, z_coords = scene_coords\n",
     "    voxels = np.zeros((x_resolution, y_resolution, z_resolution))\n",
     "    # B: create a dict of all the camera projection matricies --> silhouette images\n",
     "    num_frames = len(cam_transform_paths)\n",
@@ -270,6 +312,7 @@
     "            silhouette_path,\n",
     "            return_grayscale=True,\n",
     "            return_array=True,\n",
+    "            verbosity=debug_mode,\n",
     "        )\n",
     "        frames_to_projection_and_silhouette[frame_index] = (\n",
     "            cam_transform, silhouette_image\n",
@@ -288,16 +331,39 @@
     "                for frame_index in range(len(frames_to_projection_and_silhouette)):\n",
     "                    cam_transform, silhouette_image = frames_to_projection_and_silhouette[frame_index]\n",
     "                    # get the 2D image location in homo coords\n",
-    "                    image_location_homogenous = np.dot(cam_transform, world_coords_homogenous).reshape(1, 3)\n",
-    "                    # convert to \"pixel coords\"\n",
-    "                    pixel_x = image_location_homogenous[0, 0] / image_location_homogenous[0, 2]\n",
-    "                    pixel_y = image_location_homogenous[0, 1] / image_location_homogenous[0, 2]\n",
+    "                    image_xy_homogenous = np.dot(cam_transform, world_coords_homogenous).reshape(1, 3)\n",
+    "                    # convert to \"pixel coords\" - for numpy reasons, we need to round so we have integers\n",
+    "                    pixel_x = int(image_xy_homogenous[0, 0] // image_xy_homogenous[0, 2])\n",
+    "                    pixel_y = int(image_xy_homogenous[0, 1] // image_xy_homogenous[0, 2])\n",
+    "                    if debug_mode:\n",
+    "                        print(f\"[DEBUG] does this coord transform look right? {(x_index, y_index, z_index)} --> {(X, Y, Z)} --> {pixel_x, pixel_y}\")\n",
     "                    # check the value of the location in the silhoute - increment value of num_images_in_silhouette\n",
-    "                    if silhouette_image[pixel_x, pixel_y] == WHITE_PIXEL_VALUE:\n",
+    "                    if (\n",
+    "                        # arguably, we should skip processing of any pixel coords w/ invalid array indices - as they are out of FOV\n",
+    "                        -1 < pixel_y < silhouette_image.shape[0] and\n",
+    "                        -1 < pixel_x < silhouette_image.shape[1] and\n",
+    "                        silhouette_image[pixel_y, pixel_x] == WHITE_PIXEL_VALUE\n",
+    "                    ):\n",
     "                        num_images_in_silhouette += 1\n",
     "                # if the projection was in the silhouette  for all --> set the 3D index to be (occupied)\n",
     "                if num_frames == num_images_in_silhouette:\n",
-    "                    voxels[x_index, y_index, z_index] = OCCUPIED_VOXEL_VALUE "
+    "                    voxels[x_index, y_index, z_index] = OCCUPIED_VOXEL_VALUE\n",
+    "    return voxels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occupied_space =  determine_visual_hull(\n",
+    "    (X_RESOLUTION, Y_RESOLUTION, X_RESOLUTION),\n",
+    "    (x_coords, y_coords, z_coords),\n",
+    "    cam_transform_paths,\n",
+    "    silhouette_paths,\n",
+    "    debug_mode=False,\n",
+    ")"
    ]
   },
   {
@@ -324,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
