--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
      "output_type": "stream",
      "text": [
       "Dimensions of ../dancer/silh_cam00_00023_0000008550.pbm: 582 x 780\n",
-      "[  0 255]\n"
+      "Only 2 possible pixel values: [  0 255]\n"
      ]
     },
     {
@@ -186,29 +186,9 @@
     "    return_grayscale=True,\n",
     "    return_array=True\n",
     ")\n",
-    "print(np.unique(test_silhouette))\n",
+    "print(f\"Only 2 possible pixel values: {np.unique(test_silhouette)}\")\n",
     "plt.imshow(test_silhouette, cmap=\"gray\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0, 255])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(test_silhouette)"
    ]
   },
   {
@@ -259,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,9 +264,10 @@
     "    >>>\n",
     "\n",
     "    TODO: add details, params, return value\n",
+    "\n",
+    "    TODO: debug\n",
     "    \"\"\"\n",
     "    WHITE_PIXEL_VALUE = 255\n",
-    "    OCCUPIED_VOXEL_VALUE = 1\n",
     "\n",
     "    ### HELPER(S)\n",
     "    def _get_camera_transform_from_xml(path_to_transform: str) -> np.ndarray:\n",
@@ -301,6 +282,8 @@
     "    x_resolution, y_resolution, z_resolution = scene_shape\n",
     "    x_coords, y_coords, z_coords = scene_coords\n",
     "    voxels = np.zeros((x_resolution, y_resolution, z_resolution))\n",
+    "    if debug_mode:\n",
+    "        print(f\"{type(voxels), voxels.shape}\")\n",
     "    # B: create a dict of all the camera projection matricies --> silhouette images\n",
     "    num_frames = len(cam_transform_paths)\n",
     "    frames_to_projection_and_silhouette = dict()\n",
@@ -347,23 +330,165 @@
     "                        num_images_in_silhouette += 1\n",
     "                # if the projection was in the silhouette  for all --> set the 3D index to be (occupied)\n",
     "                if num_frames == num_images_in_silhouette:\n",
-    "                    voxels[x_index, y_index, z_index] = OCCUPIED_VOXEL_VALUE\n",
+    "                    voxels[x_index, y_index, z_index] = 1\n",
+    "\n",
+    "    # TODO: Report the total number and what rela?ve por?on of all voxels are in the visual hull\n",
     "    return voxels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "occupied_space =  determine_visual_hull(\n",
+    "occupied_space = determine_visual_hull(\n",
     "    (X_RESOLUTION, Y_RESOLUTION, X_RESOLUTION),\n",
     "    (x_coords, y_coords, z_coords),\n",
     "    cam_transform_paths,\n",
     "    silhouette_paths,\n",
     "    debug_mode=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(numpy.ndarray, (50, 50, 50))"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(occupied_space), occupied_space.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occupied_space.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Identify Surface Voxels\n",
+    "\n",
+    "Surface = occupied + have >= 1 empty neighbor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def identify_surface_voxels(\n",
+    "        occupancy_voxel_grid: np.ndarray,\n",
+    "        debug_mode: bool = False,\n",
+    "    ) -> list[np.ndarray]:\n",
+    "    \"\"\"\n",
+    "    Brute force search for the set of voxels in the reconstructed surface.\n",
+    "\n",
+    "    Will also report the total number, and percentage of surface voxels there\n",
+    "    are out of the total number of voxel grid cells.\n",
+    "\n",
+    "    Parameter:\n",
+    "        occupany_voxel_grid(np.ndarray): 3D NumPy array - a binary voxel\n",
+    "            grid where 1 = occupied space, and zero is empty.\n",
+    "\n",
+    "    Returns: np.ndarray: an nx3 matrix, it will have n rows\n",
+    "        (where n = the number of surface voxels), each having 3 elements\n",
+    "        - which each represent the index location of a surface voxel\n",
+    "        in the grid.\n",
+    "    \"\"\"\n",
+    "    surface_voxels = list()\n",
+    "\n",
+    "    # find the surface voxels\n",
+    "    occupied_index_locations = np.where(occupancy_voxel_grid == 1)\n",
+    "    if debug_mode:\n",
+    "        print(f\"Indices of non-empty space: {occupied_index_locations}.\")\n",
+    "    for location in occupied_index_locations:\n",
+    "        if len(location) == 3:\n",
+    "            x_index, y_index, z_index = location\n",
+    "            # search all the neighbors\n",
+    "            neighbor_indices_x = list(set([\n",
+    "                max(0, x_index - 1), x_index, min(x_index + 1, occupancy_voxel_grid.shape[0] - 1)\n",
+    "            ]))\n",
+    "            neighbor_indices_y = list(set([\n",
+    "                max(0, y_index - 1), y_index, min(y_index + 1, occupancy_voxel_grid.shape[1] - 1)\n",
+    "            ]))\n",
+    "            neighbor_indices_z = list(set([\n",
+    "                max(0, z_index - 1), z_index, min(z_index + 1, occupancy_voxel_grid.shape[2] - 1)\n",
+    "            ]))\n",
+    "            nx, ny, nz = np.meshgrid(neighbor_indices_x, neighbor_indices_y, neighbor_indices_z, indexing=\"ij\")\n",
+    "            num_empty = 0\n",
+    "            for neighbor_num in np.arange(nx.shape[0]):\n",
+    "                neighbor_occupancy = occupancy_voxel_grid[\n",
+    "                    nx[neighbor_num],\n",
+    "                    ny[neighbor_num],\n",
+    "                    nz[neighbor_num]\n",
+    "                ]\n",
+    "                if neighbor_occupancy == 0:  # we'll end up checking the voxel itself, but that's ok b/c it's guaranteed to be 1\n",
+    "                    num_empty += 1\n",
+    "            if num_empty > 0:\n",
+    "                surface_voxels.append([x_index, y_index, z_index])\n",
+    "\n",
+    "    # report total num and % of surface voxels\n",
+    "    surface_voxels = np.asarray(surface_voxels)\n",
+    "    print(f\"=========== Identifying Surface Voxels.... ===========\")\n",
+    "    num_surface_voxels = surface_voxels.shape[0]\n",
+    "    total_num_voxels = np.prod(occupancy_voxel_grid.shape)\n",
+    "    print(f\"Total number: {num_surface_voxels}.\")\n",
+    "    print(f\"Percentage: {(num_surface_voxels % total_num_voxels) * 100}%.\")\n",
+    "\n",
+    "    return surface_voxels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of non-empty space: (array([], dtype=int64), array([], dtype=int64), array([], dtype=int64)).\n",
+      "=========== Identifying Surface Voxels.... ===========\n",
+      "Total number: 0.\n",
+      "Percentage: 0%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "surface_voxels_indices = identify_surface_voxels(occupied_space, debug_mode=True)"
    ]
   },
   {
