--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "         4.62931201e+00]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../dancer/silh_cam00_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam01_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam02_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam03_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam04_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam05_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam06_00023_0000008550.pbm',\n",
+       " '../dancer/silh_cam07_00023_0000008550.pbm']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "silhouette_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +255,7 @@
        " '../dancer/calibration/cam05.xml']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,8 +265,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see above, for some reason the `glob` function returns the file paths in unsorted order. We should make a mental note to correct this later. Ideally, I would like to have the corresponding silhouette images and camera transforms at the same index in both lists."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,9 +361,13 @@
     "                        -1 < pixel_x < silhouette_image.shape[1] and\n",
     "                        silhouette_image[pixel_y, pixel_x] == WHITE_PIXEL_VALUE\n",
     "                    ):\n",
+    "                        if debug_mode:\n",
+    "                            print(f\"[DEBUG] coords {pixel_y, pixel_x} are in bounds and have pixel val: {silhouette_image[pixel_y, pixel_x]}\")\n",
     "                        num_images_in_silhouette += 1\n",
     "                # if the projection was in the silhouette  for all --> set the 3D index to be (occupied)\n",
     "                if num_frames == num_images_in_silhouette:\n",
+    "                    if debug_mode:\n",
+    "                        print(f\"[DEBUG] voxel @ {x_index, y_index, z_index} is occupied!\")\n",
     "                    voxels[x_index, y_index, z_index] = 1\n",
     "\n",
     "    # TODO: Report the total number and what rela?ve por?on of all voxels are in the visual hull\n",
@@ -338,22 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "occupied_space = determine_visual_hull(\n",
     "    (X_RESOLUTION, Y_RESOLUTION, X_RESOLUTION),\n",
     "    (x_coords, y_coords, z_coords),\n",
-    "    cam_transform_paths,\n",
-    "    silhouette_paths,\n",
+    "    sorted(cam_transform_paths),\n",
+    "    sorted(silhouette_paths),\n",
     "    debug_mode=False,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +400,7 @@
        "(numpy.ndarray, (50, 50, 50))"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,22 +411,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "150.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "occupied_space.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Woohoo! Looks like we have 150 occupied voxels - so something worked!"
    ]
   },
   {
@@ -402,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
