--- a/src/experiments_hw3.ipynb
+++ b/src/experiments_hw3.ipynb
@@ -86,6 +86,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ],\n",
+       "        [-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ],\n",
+       "        [-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ],\n",
+       "        ...,\n",
+       "        [-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ],\n",
+       "        [-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ],\n",
+       "        [-2.5       , -2.5       , -2.5       , ..., -2.5       ,\n",
+       "         -2.5       , -2.5       ]],\n",
+       "\n",
+       "       [[-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918],\n",
+       "        [-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918],\n",
+       "        [-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918],\n",
+       "        ...,\n",
+       "        [-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918],\n",
+       "        [-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918],\n",
+       "        [-2.39795918, -2.39795918, -2.39795918, ..., -2.39795918,\n",
+       "         -2.39795918, -2.39795918]],\n",
+       "\n",
+       "       [[-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837],\n",
+       "        [-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837],\n",
+       "        [-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837],\n",
+       "        ...,\n",
+       "        [-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837],\n",
+       "        [-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837],\n",
+       "        [-2.29591837, -2.29591837, -2.29591837, ..., -2.29591837,\n",
+       "         -2.29591837, -2.29591837]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837],\n",
+       "        [ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837],\n",
+       "        [ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837],\n",
+       "        ...,\n",
+       "        [ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837],\n",
+       "        [ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837],\n",
+       "        [ 2.29591837,  2.29591837,  2.29591837, ...,  2.29591837,\n",
+       "          2.29591837,  2.29591837]],\n",
+       "\n",
+       "       [[ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918],\n",
+       "        [ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918],\n",
+       "        [ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918],\n",
+       "        ...,\n",
+       "        [ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918],\n",
+       "        [ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918],\n",
+       "        [ 2.39795918,  2.39795918,  2.39795918, ...,  2.39795918,\n",
+       "          2.39795918,  2.39795918]],\n",
+       "\n",
+       "       [[ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ],\n",
+       "        [ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ],\n",
+       "        [ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ],\n",
+       "        ...,\n",
+       "        [ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ],\n",
+       "        [ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ],\n",
+       "        [ 2.5       ,  2.5       ,  2.5       , ...,  2.5       ,\n",
+       "          2.5       ,  2.5       ]]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_coords"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,25 +388,51 @@
     "from util import ops\n",
     "\n",
     "\n",
+    "WHITE_PIXEL_VALUE = 255\n",
+    "\n",
+    "\n",
     "def determine_visual_hull(\n",
     "        scene_shape: tuple[int, int, int],\n",
     "        scene_coords: tuple[np.ndarray, np.ndarray, np.ndarray],\n",
     "        cam_transform_paths: list[str],\n",
     "        silhouette_paths: list[str],\n",
     "        debug_mode: bool = False,\n",
+    "        white_pixel_val: int = WHITE_PIXEL_VALUE\n",
     "    ) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Evaluates which voxels are empty and which are occupied.\n",
     "\n",
+    "    Be careful: this code ASSUMES that there is an equal number of\n",
+    "    strings in both `cam_transform_paths` and `silhouette_paths`, AND\n",
+    "    that each index position in these lists refers to the same\n",
+    "    captured frame of the 3D scene!\n",
+    "\n",
     "    Example:\n",
-    "    >>>\n",
+    "    >>> occupied_space = determine_visual_hull(\n",
+    "    ...     (50, 50, 50),  # arbitrary, but probably best to use the same value for each axis\n",
+    "    ...     (x_coords, y_coords, z_coords),  # pre-computed set of all XYZ coords in world space\n",
+    "    ...     sorted(cam_transform_paths),\n",
+    "    ...     sorted(silhouette_paths),\n",
+    "    ...     debug_mode=True,  # good for initial testing\n",
+    "    ...     white_pixel_val=1,\n",
+    "    ... )\n",
     "\n",
-    "    TODO: add details, params, return value\n",
+    "    Parameters:\n",
+    "        scene_shape(array-like): 1D row vector with 3 elements for the resolution\n",
+    "            of the grid's XYZ axes\n",
+    "        scene_coords(tuple[nd.ndarray]): 3-tuple representing the set of\n",
+    "            all pre-computed XYZ coords in world space.\n",
+    "        cam_transform_paths(list): relative paths to XML files serializing the 3x4\n",
+    "            projection matrix for each frame\n",
+    "        silhouette_paths(list): relative paths to the binary images showing where\n",
+    "            the subject of each frame is located in the scene\n",
+    "        debug_mode(bool): enables debug logs. Default is False.\n",
+    "        white_pixel_val(np.int8): the value representing occupied space in the\n",
+    "            silhouette images. Default is 255 for the purpose of hw3.\n",
     "\n",
-    "    TODO: debug\n",
+    "    Returns: np.ndarray: binary 3D array of shape = scene_shape. Occupied space\n",
+    "        will be encoded as 1, and empty space is 0.\n",
     "    \"\"\"\n",
-    "    WHITE_PIXEL_VALUE = 255\n",
-    "\n",
     "    ### HELPER(S)\n",
     "    def _get_camera_transform_from_xml(path_to_transform: str) -> np.ndarray:\n",
     "        \"\"\"Reads serialized form of a projection matrix into a 3x4 NumPy array.\"\"\"\n",
@@ -359,7 +489,7 @@
     "                        # arguably, we should skip processing of any pixel coords w/ invalid array indices - as they are out of FOV\n",
     "                        -1 < pixel_y < silhouette_image.shape[0] and\n",
     "                        -1 < pixel_x < silhouette_image.shape[1] and\n",
-    "                        silhouette_image[pixel_y, pixel_x] == WHITE_PIXEL_VALUE\n",
+    "                        silhouette_image[pixel_y, pixel_x] == white_pixel_val\n",
     "                    ):\n",
     "                        if debug_mode:\n",
     "                            print(f\"[DEBUG] coords {pixel_y, pixel_x} are in bounds and have pixel val: {silhouette_image[pixel_y, pixel_x]}\")\n",
@@ -370,18 +500,29 @@
     "                        print(f\"[DEBUG] voxel @ {x_index, y_index, z_index} is occupied!\")\n",
     "                    voxels[x_index, y_index, z_index] = 1\n",
     "\n",
-    "    # TODO: Report the total number and what rela?ve por?on of all voxels are in the visual hull\n",
+    "    # Report the total number and what relatve portion of all voxels are in the visual hull\n",
+    "    num_occupied = int(voxels.sum())\n",
+    "    percent_occupied = num_occupied / np.prod(scene_shape)\n",
+    "    print(f\"{num_occupied} voxels are in the visual hull, representing {percent_occupied * 100}% of the entire voxel grid.\")\n",
     "    return voxels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150 voxels are in the visual hull, representing 0.12% of the entire voxel grid.\n"
+     ]
+    }
+   ],
    "source": [
     "occupied_space = determine_visual_hull(\n",
-    "    (X_RESOLUTION, Y_RESOLUTION, X_RESOLUTION),\n",
+    "    (X_RESOLUTION, Y_RESOLUTION, Z_RESOLUTION),\n",
     "    (x_coords, y_coords, z_coords),\n",
     "    sorted(cam_transform_paths),\n",
     "    sorted(silhouette_paths),\n",
@@ -391,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +541,7 @@
        "(numpy.ndarray, (50, 50, 50))"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +561,7 @@
        "150.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +588,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(occupied_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +637,7 @@
     "    surface_voxels = list()\n",
     "\n",
     "    # find the surface voxels\n",
-    "    occupied_index_locations = np.where(occupancy_voxel_grid == 1)\n",
+    "    occupied_index_locations = np.where(occupancy_voxel_grid == 1.)\n",
     "    if debug_mode:\n",
     "        print(f\"Indices of non-empty space: {occupied_index_locations}.\")\n",
     "    for location in occupied_index_locations:\n",
@@ -518,14 +679,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indices of non-empty space: (array([], dtype=int64), array([], dtype=int64), array([], dtype=int64)).\n",
+      "Indices of non-empty space: (array([25, 25, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
+      "       26, 26, 26, 26, 26, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
+      "       27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
+      "       27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27, 27,\n",
+      "       27, 27, 27, 27, 27, 27, 27, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28,\n",
+      "       28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28,\n",
+      "       28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 28, 29, 29, 29,\n",
+      "       29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29,\n",
+      "       29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 30, 30, 31, 33]), array([14, 14, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14,\n",
+      "       14, 14, 15, 15, 15, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12,\n",
+      "       12, 12, 12, 12, 12, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+      "       13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14,\n",
+      "       14, 14, 14, 14, 14, 15, 15, 12, 12, 12, 12, 12, 12, 13, 13, 13, 13,\n",
+      "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14,\n",
+      "       14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 13, 13, 13,\n",
+      "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14,\n",
+      "       14, 14, 14, 14, 15, 15, 15, 15, 15, 15, 13, 13, 13, 12]), array([19, 20, 13, 14, 21, 22, 23, 24, 25, 22, 23, 24, 25, 26, 28, 29, 30,\n",
+      "       31, 32, 29, 30, 31,  3,  4,  5,  6,  7,  8,  9, 10, 11, 17, 18, 19,\n",
+      "       20, 21, 22, 23, 24,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19,\n",
+      "       20, 21, 22, 23, 24, 25, 26, 14, 15, 16, 17, 18, 22, 23, 24, 25, 26,\n",
+      "       27, 28, 29, 30, 31, 30, 31, 18, 19, 20, 21, 22, 23, 10, 11, 12, 13,\n",
+      "       14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,  9, 10,\n",
+      "       11, 12, 13, 14, 15, 16, 17, 18, 19, 24, 25, 26, 27, 28,  8,  9, 10,\n",
+      "       11, 12, 13, 14, 15, 16, 17, 18, 19, 28,  6,  7,  8,  9, 10, 11, 12,\n",
+      "       13, 14, 15, 16,  0,  1,  2,  3, 10, 11, 28, 29, 29, 31])).\n",
       "=========== Identifying Surface Voxels.... ===========\n",
       "Total number: 0.\n",
       "Percentage: 0%.\n"
@@ -534,6 +719,26 @@
    ],
    "source": [
     "surface_voxels_indices = identify_surface_voxels(occupied_space, debug_mode=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occupied_space[25, 14, 19]"
    ]
   },
   {
